--- a/style.sass
+++ b/style.sass
@@ -470,7 +470,7 @@ blockquote
 					&:focus
 						text-decoration: none
 		.arrow
-			margin-top: -10px
+			margin-top: 5px
 
 
 
